# memvid-ffi

./: Cargo.toml  README.md  build.rs  cbindgen.toml
include/: memvid.h
src/: ask.rs  doctor.rs  error.rs  frame.rs  handle.rs  lib.rs  lifecycle.rs  mutation.rs  search.rs  state.rs  timeline.rs  util.rs  verify.rs
